--- a/01_hola_mundo/index.html
+++ b/01_hola_mundo/index.html
@@ -2,11 +2,20 @@
 <html lang="es">
     <head>
         <meta charset="UTF-8">
+        <meta name="description" content="pagina web sobre HTML y CSS">
+        <meta name="keywords" content="HTML, CSS, Web Development"><!--ya no se usa-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Hola Mundo</title>
+        <link rel="stylesheet" href="./css/style.css">
+        <!--<script>
+            console.log("Esto es un hola mundo");
+        </script>-->
+        <script src="js/app.js"></script>
+        <link rel="shortcut icon" href="favicon.png" type="image/x-png">
     </head>
     <body>
         <h1>Hola Mundo</h1>
+
     </body>
 </html>
