elementos bloque/linea

--- a/01_hola_mundo/index.html
+++ b/01_hola_mundo/index.html
@@ -16,6 +16,20 @@
     </head>
     <body>
         <h1>Hola Mundo</h1>
+        <p id="p1" class="violeta">Esto es un parrafo</p>
+        <div>
+            <p id="p2" class="latin">Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt inventore neque fugiat repellendus vel unde cum suscipit, error excepturi magnam magni! <strong>alias, quasi facere ea maiores quibusdam</strong>. Et, ipsa!</p>
+            <p id="p3" class="latin"><b>Lorem ipsum dolor</b> sit amet consectetur adipisicing elit. Deserunt inventore neque fugiat repellendus vel unde cum suscipit, error excepturi magnam magni! Adipisci alias, quasi facere ea maiores quibusdam. <em> Et, ipsa!</em></p>
+        </div>
+        <p><a href="http://microsoft.com">Enlace a Microsoft</a></p>
+        <img src="images/favicon.png" alt="Bandera de España">
+        <hr>
 
+        <h2>Alumnos</h2>
+        <ul>
+            <li>Eduardo</li>
+            <li>Miguel</li>
+            <li>Daniel</li>
+        </ul>
     </body>
 </html>
