--- a/ej_01/index.html
+++ b/ej_01/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1>La ciudad de Almeria</h1>
     <img src="./images/puerto_almeria.jpg" alt="Imagen del puerto de Almeria">
-    <p><strong>Almería</strong>, es un municipio español y una ciudad, capital del mismo y de la provincia homónima, que pertenecen a la comunidad autónoma de <a href="http://www.andalucia.org/es/">Andalucía</a>.</p>
+    <p><strong>Almería</strong>, es un municipio español y una ciudad, capital del mismo y de la provincia homónima, que pertenecen a la <a href="http://www.andalucia.org/es/">comunidad autónoma de Andalucía</a>.</p>
 
     <p>Es el centro neurálgico de la <strong>Comarca Metropolitana de Almería</strong>, en el extremo sureste de la Península Ibérica y de la comarca turística de Almería-Cabo de Gata-Níjar.</p>
     <p>La rodean por el oeste la sierra de Gádor, por el norte Sierra Alhamilla y por el este el valle y delta del río Andarax y, más allá, una llanura que culmina en la sierra de Cabo de Gata. Al sur, su puerto y litoral se abren a una amplia bahía sobre el mar Mediterráneo</p>
@@ -19,7 +19,7 @@
     <h2>Ciudades pertenecientes al municipio de Almeria</h2>
     <ul>
         <li>Níjar</li>
-        <li><a href="https://es.wikipedia.org/wiki/Roquetas_de_Mar">Roquetas de Mar</a></li>
+        <li><a href="https://es.wikipedia.org/wiki/Roquetas_de_Mar" target="blank">Roquetas de Mar</a></li>
         <li>Santa Fe de Mondújar</li>
         <li>Purchena</li>
         <li>Turrillas</li>
