--- a/03_Estilos/index.html
+++ b/03_Estilos/index.html
@@ -5,20 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="css/herencia.css">
+    <!-- <link rel="stylesheet" href="css/herencia.css"> -->
+    <link rel="stylesheet" href="css/avanzados.css">
 </head>
 <body>
+    <header><h1>Estilos CSS</h1></header>
     <main>
-        <header><h1>Estilos CSS</h1></header>
-        <p class="p1">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum vitae maxime recusandae hic vel minima soluta illum id quas ipsa accusamus omnis amet, explicabo alias voluptatum eaque debitis necessitatibus quis?</p>
-        <p class="p1 p2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe reprehenderit unde voluptates eveniet consequatur placeat, id qui sed earum magnam corporis, minima eligendi? Illum dignissimos corrupti odio architecto error cumque?</p>
-        <p class="p1">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quos optio rem nesciunt aliquam molestiae! Dicta voluptas natus sunt! Natus a sunt harum asperiores corporis quas vel accusantium ex praesentium numquam.</p>
-        <p class="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi hic nemo impedit. Quas porro, aspernatur dolores deleniti, numquam excepturi ipsam, officia distinctio vero esse illo error. Consequuntur odit ipsam asperiores?</p>
-        <p class="p1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla culpa, quo laboriosam suscipit voluptates praesentium, libero modi, vitae quibusdam dolor dolore laborum optio possimus harum alias aspernatur ipsam et fuga?</p>
+        <section> 
+            <p name="Lorem">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae, nostrum adipisci laboriosam nam optio magnam id, incidunt provident nesciunt deleniti corrupti fugit expedita dolorum aliquid, exercitationem vero voluptatem delectus reprehenderit.</p>
+            <p name="Sapiente">Doloremque, quas reprehenderit? Repudiandae voluptatem tempora quaerat labore odio perspiciatis assumenda quibusdam. Ad veritatis minima illo qui reprehenderit sapiente repellat accusamus quam voluptates ducimus harum in ullam, explicabo dolorum corporis?</p>  
+        </section>
+        <article>
+            <p class="p1 p2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum vitae maxime recusandae hic vel minima soluta illum id quas ipsa accusamus omnis amet, explicabo alias voluptatum eaque debitis necessitatibus quis?</p>
+            <p class="p1 azul">Ipsum dolor sit amet, consectetur adipisicing elit. Saepe reprehenderit unde voluptates eveniet consequatur placeat, id qui sed earum magnam corporis, minima eligendi? Illum dignissimos corrupti odio architecto error cumque?</p>
+            <p class="p1">Dolor, sit amet consectetur adipisicing elit. Quos optio rem nesciunt aliquam molestiae! Dicta voluptas natus sunt! Natus a sunt harum asperiores corporis quas vel accusantium ex praesentium numquam.</p>
+            <p class="p1">Sit amet consectetur adipisicing elit. Nisi hic nemo impedit. Quas porro, aspernatur dolores deleniti, numquam excepturi ipsam, officia distinctio vero esse illo error. Consequuntur odit ipsam asperiores?</p>
+            <p class="p1">Consectetur adipisicing elit. Nulla culpa, quo laboriosam suscipit voluptates praesentium, libero modi, vitae quibusdam dolor dolore laborum optio possimus harum alias aspernatur ipsam et fuga?</p>
+        </article>
     </main>
-    
-    <footer>
 
+    <footer>
+        <p>Daniel Lupu - Tajamar</p>
+        <p class="derechos">Copia lo que quieras</p>
     </footer>
 </body>
 </html>
