--- a/02_ejercicio/index.html
+++ b/02_ejercicio/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="shortcut icon" href="favicon.png" type="image/x-png">
         <title>Almeria</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>
     <body>
         <!--El elemento de HTML Header (<header>) representa un grupo de ayudas introductorias o de navegación. Puede contener algunos elementos de encabezado, pero también otros elementos como un logo, una sección que aglutine secciones de encabezados, una formulario de búsqueda o cosas parecidas.-->
