--- a/03_Estilos/index.html
+++ b/03_Estilos/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <!-- <link rel="stylesheet" href="css/herencia.css"> -->
-    <link rel="stylesheet" href="css/avanzados.css">
+    <title>Estilos avanzados</title>
+    <!-- <link rel="stylesheet" href="css/herencia.css"> 
+    <link rel="stylesheet" href="css/avanzados.css">-->
+    <link rel="stylesheet" href="css/nuevos3.css">
 </head>
 <body>
     <header><h1>Estilos CSS</h1></header>
@@ -16,6 +17,7 @@
             <p name="Sapiente">Doloremque, quas reprehenderit? Repudiandae voluptatem tempora quaerat labore odio perspiciatis assumenda quibusdam. Ad veritatis minima illo qui reprehenderit sapiente repellat accusamus quam voluptates ducimus harum in ullam, explicabo dolorum corporis?</p>  
         </section>
         <article>
+            <h2>Ejemplo de Article</h2>
             <p class="p1 p2">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Harum vitae maxime recusandae hic vel minima soluta illum id quas ipsa accusamus omnis amet, explicabo alias voluptatum eaque debitis necessitatibus quis?</p>
             <p class="p1 azul">Ipsum dolor sit amet, consectetur adipisicing elit. Saepe reprehenderit unde voluptates eveniet consequatur placeat, id qui sed earum magnam corporis, minima eligendi? Illum dignissimos corrupti odio architecto error cumque?</p>
             <p class="p1">Dolor, sit amet consectetur adipisicing elit. Quos optio rem nesciunt aliquam molestiae! Dicta voluptas natus sunt! Natus a sunt harum asperiores corporis quas vel accusantium ex praesentium numquam.</p>
