--- a/02_ejercicio/index.html
+++ b/02_ejercicio/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <link rel="shortcut icon" href="favicon.png" type="image/x-png">
         <title>Almeria</title>
+        <link href="https://fonts.googleapis.com/css?family=Roboto:400,700i" rel="stylesheet">
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
@@ -35,7 +36,7 @@
 
                 <p>Es el centro neurálgico de la <strong>Comarca Metropolitana de Almería</strong>, en el extremo sureste de la Península Ibérica y de la comarca turística de Almería-Cabo de Gata-Níjar.</p>
                 <p>La rodean por el oeste la sierra de Gádor, por el norte Sierra Alhamilla y por el este el valle y delta del río Andarax y, más allá, una llanura que culmina en la sierra de Cabo de Gata. Al sur, su puerto y litoral se abren a una amplia bahía sobre el mar Mediterráneo</p>
-                <p>Fue fundada por Abderramán III en un emplazamiento dominado anteriormente por otras urbes como la ibera Urci o la romana Portus Magnus y desempeñó un papel fundamental durante el califato de Córdoba, llegando a ser el puerto más importante del <em>al-Ándalus omeya</em>. Alcanzó su máximo esplendor durante la taifa, en el siglo XI, convirtiéndose bajo el reinado de Almotacín en un emporio comercial y cultural.</p>
+                <p>Fue fundada por Abderramán III en un emplazamiento dominado anteriormente por otras urbes como la ibera Urci o la romana Portus Magnus y desempeñó un papel fundamental durante el califato de Córdoba, llegando a ser el puerto más importante del <em>al-Ándalus omeya</em>. Alcanzó su máximo esplendor durante la taifa, en el siglo XI, convirtiéndose bajo el reinado de <q>Almotacín en un emporio comercial y cultural</q>.</p>
                 <hr>
 
                 <!--El elemento de HTML section (<section>) representa una sección genérica de un documento. Sirve para determinar qué contenido corresponde a qué parte de un esquema. Piensa en el esquema como en el índice de contenido de un libro; un tema común y subsecciones relacionadas.  Es, por lo tanto, una etiquéta semántica. Su funcionalidad principal es estructurar semánticamente un documento a la hora de ser representado por parte de un agente usuario. Por ejemplo, un agente de usuario que represente el documento en voz, podría exponer al usuario el índice de contenido por niveles para navegar rápidamente por las distintas partes.-->
@@ -69,8 +70,8 @@
 
         <!--El Elemento HTML Footer (<footer>) representa un pie de página para el contenido de sección más cercano o el elemento  raíz de sección (p.e, su ancestro mas cercano <article>, <aside>, <nav>, <section>,<blockquote>, <body>, <details>, <fieldset>, <figure>, <td>). Un pie de página típicamente contiene información acerca de el autor de la sección, datos de derechos de autor o enlaces a documentos relacionados.-->
         <footer>
-            <p>Daniel Lupu - Tajamar</p>
-            <p>Texto copiado libremente de la wikipedia</p>
+            <address>Daniel Lupu - Tajamar</address>
+            <small>Texto copiado libremente de la wikipedia</small>
         </footer>
     </body>
 </html>
