--- a/02_ejercicio/index.html
+++ b/02_ejercicio/index.html
@@ -16,7 +16,7 @@
             <!--El elemento de HTML Header (<header>) representa un grupo de ayudas introductorias o de navegación. Puede contener algunos elementos de encabezado, pero también otros elementos como un logo, una sección que aglutine secciones de encabezados, una formulario de búsqueda o cosas parecidas.-->
             <header>
                 <h1>La ciudad de Almeria</h1>
-                <p>La ciudad mas bonita del Sur</p>
+                <p>Informese sobre la ciudad del Sur:</p>
             </header>
 
             <!--Crea un menu de navegacion-->
