--- a/02_ejercicio/index.html
+++ b/02_ejercicio/index.html
@@ -15,22 +15,76 @@
 
             <!--El elemento de HTML Header (<header>) representa un grupo de ayudas introductorias o de navegación. Puede contener algunos elementos de encabezado, pero también otros elementos como un logo, una sección que aglutine secciones de encabezados, una formulario de búsqueda o cosas parecidas.-->
             <header>
-                <h1>La ciudad de Almeria</h1>
-                <p>Informese sobre la ciudad del Sur:</p>
+                <h1>La ciudad de Almeria <img src="images/escudo.png" alt="Escudo de la provincia de Almeria" title="Escudo Almeriense"></h1>
             </header>
 
             <!--Crea un menu de navegacion-->
             <nav>
                 <ul>
                     <li>Home</li>
+                    <li>Puerto</li>
+                    <li>Playas</li>
+                    <li>Fiestas</li>
+                    <li>Deportes</li>
                     <li><a href="http://www3.aytoalmeria.es/db/www.nsf/home-www">Ayuntamiento</a></li>
                     <li>Contacto</li>
                 </ul>
             </nav>
             <hr>
+            <h2>Núcleos de población y distancia en km a la capital del municipio</h2>
+            <table class="t1">
+                <tr>
+                    <th scope="col">Nucleo</th>
+                    <th scope="col">Población 2014</th>
+                    <th scope="col">Población 2017</th>
+                    <th scope="col">Distancia (km)</th>
+                    <th scope="col">Coordenadas</th>
+                </tr>
+                <tr>
+                    <th scope="row">Almeria</th>
+                    <td>165 002</td>
+                    <td>196.192</td>
+                    <td>0</td>
+                    <td>36°50′24″N 2°28′04″O</td>
+                </tr>
+                <tr>
+                    <th scope="row">El Alquián</th>
+                    <td>5754</td>
+                    <td>5768</td>
+                    <td>8</td>
+                    <td>36°51′10″N 2°21′18″O</td>
+                </tr>
+                <tr>
+                    <th scope="row">El Bobar</th>
+                    <td>64</td>
+                    <td>81</td>
+                    <td>4</td>
+                    <td>36°49′40″N 2°24′54″O</td>
+                </tr>
+                <tr>
+                    <th scope="row">Cabo de Gata</th>
+                    <td>1583</td>
+                    <td>Sin datos</td>
+                    <td>023</td>
+                    <td>36°46′50″N 2°14′36″O</td>
+                </tr>
+                <tr>
+                    <th scope="row">Castell del Rey</th>
+                    <td>184</td>
+                    <td>201</td>
+                    <td>3</td>
+                    <td>36°49′43″N 2°30′05″O</td>
+                </tr>
+                <tr>
+                    <th scope="row">Costacabana</th>
+                    <td>1209</td>
+                    <td>1200</td>
+                    <td>6</td>
+                    <td>36°50′14″N 2°22′55″O</td>
+                </tr>
+            </table>
             <!--El elemento HTML <main>  representa el contenido principal del <body> de un documento o aplicación. El área principal del contenido consiste en el contenido que está directamente relacionado, o se expande sobre el tema central de un documento o la funcionalidad central de una aplicación. Este contenido debe ser único al documento, excluyendo cualquier contenido que se repita a través de un conjunto de documentos como barras laterales, enlaces de navegación, información de derechos de autor, logos del sitio y formularios de búsqueda (a menos, claro, que la función principal del documento sea un formulario de búsqueda).-->
             <main>
-
                 <!--El Elemento article de HTML (<article>) representa una composición auto-contenida en un documento, página, una aplicación o en el sitio, que se destina a distribuir de forma independiente o reutilizable, por ejemplo, en la sindicación. Podría ser un mensaje en un foro, un artículo de una revista o un periódico, una entrada de blog, un comentario de un usuario, un widget interactivo o gadget, o cualquier otro elemento independiente del contenido.-->
                 <article>
                     <img src="./images/puerto_almeria.jpg" alt="Imagen del puerto de Almeria">
