Modificación imagenes figure

--- a/02_ejercicio/index.html
+++ b/02_ejercicio/index.html
@@ -31,8 +31,8 @@
                 </ul>
             </nav>
             <hr>
-            <h2>Núcleos de población y distancia en km a la capital del municipio</h2>
             <table class="t1">
+                <caption>Núcleos de población y distancia en km a la capital del municipio</caption>
                 <tr>
                     <th scope="col">Nucleo</th>
                     <th scope="col">Población 2014</th>
@@ -87,7 +87,15 @@
             <main>
                 <!--El Elemento article de HTML (<article>) representa una composición auto-contenida en un documento, página, una aplicación o en el sitio, que se destina a distribuir de forma independiente o reutilizable, por ejemplo, en la sindicación. Podría ser un mensaje en un foro, un artículo de una revista o un periódico, una entrada de blog, un comentario de un usuario, un widget interactivo o gadget, o cualquier otro elemento independiente del contenido.-->
                 <article>
-                    <img src="./images/puerto_almeria.jpg" alt="Imagen del puerto de Almeria">
+                    <figure>
+                        <img src="./images/puerto_almeria.jpg" alt="Imagen del puerto de Almeria">
+                        <figcaption>Puerto de Almeria</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="./images/Almeria2.jpg" alt="La antigua Alcazaba de Almería">
+                        <figcaption>Alcazaba de Almería</figcaption>
+                    </figure>
+                    
                     <p><strong>Almería</strong>, es un municipio español y una ciudad, capital del mismo y de la provincia homónima, que pertenecen a la comunidad autónoma de <a href="http://www.andalucia.org/es/">Andalucía</a>.</p>
 
                     <p>Es el centro neurálgico de la <strong>Comarca Metropolitana de Almería</strong>, en el extremo sureste de la Península Ibérica y de la comarca turística de Almería-Cabo de Gata-Níjar.</p>
