añadido video almeria

--- a/02_ejercicio/index.html
+++ b/02_ejercicio/index.html
@@ -7,6 +7,7 @@
         <link rel="shortcut icon" href="favicon.png" type="image/x-png">
         <title>Almeria</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,700i" rel="stylesheet">
+        <link rel="stylesheet" href="..//fontawesome-free/web-fonts-with-css/css/fontawesome-all.min.css">
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/style.css">
     </head>
@@ -83,6 +84,9 @@
                     <td>36°50′14″N 2°22′55″O</td>
                 </tr>
             </table>
+            <figure>
+                <video src="./video/v_almeria.mp4"></video>
+            </figure>
             <!--El elemento HTML <main>  representa el contenido principal del <body> de un documento o aplicación. El área principal del contenido consiste en el contenido que está directamente relacionado, o se expande sobre el tema central de un documento o la funcionalidad central de una aplicación. Este contenido debe ser único al documento, excluyendo cualquier contenido que se repita a través de un conjunto de documentos como barras laterales, enlaces de navegación, información de derechos de autor, logos del sitio y formularios de búsqueda (a menos, claro, que la función principal del documento sea un formulario de búsqueda).-->
             <main>
                 <!--El Elemento article de HTML (<article>) representa una composición auto-contenida en un documento, página, una aplicación o en el sitio, que se destina a distribuir de forma independiente o reutilizable, por ejemplo, en la sindicación. Podría ser un mensaje en un foro, un artículo de una revista o un periódico, una entrada de blog, un comentario de un usuario, un widget interactivo o gadget, o cualquier otro elemento independiente del contenido.-->
@@ -134,7 +138,7 @@
             <hr>
             <!--El Elemento HTML Footer (<footer>) representa un pie de página para el contenido de sección más cercano o el elemento  raíz de sección (p.e, su ancestro mas cercano <article>, <aside>, <nav>, <section>,<blockquote>, <body>, <details>, <fieldset>, <figure>, <td>). Un pie de página típicamente contiene información acerca de el autor de la sección, datos de derechos de autor o enlaces a documentos relacionados.-->
             <footer>
-                <address>Daniel Lupu - Tajamar</address>
+                <address><i class="far fa-copyright"></i> Daniel Lupu - Tajamar</address>
                 <small>Texto copiado libremente de la wikipedia</small>
             </footer>
         </div>
