--- a/09_video/video.html
+++ b/09_video/video.html
@@ -6,9 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
+        figure{
+            margin: 0;
+            padding: 0;
+            width: 50%;
+        }
         video{
-            width: 40%;
-            height: 480px;
+            width: 100%;
         }
     </style>
 </head>
