--- a/08_imagenes/floats.html
+++ b/08_imagenes/floats.html
@@ -6,16 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document float</title>
     <style>
+        *{
+            box-sizing: border-box;
+        }
         figure{
             margin: 0;
-            float: left;
             padding: 0;
-            padding-right: 1rem;
-            width: 30%;
+            float: left;
+            padding-right: 2rem;
+            width: 50%;
+            max-width: 600px;
         }
         img{
             width: 100%;
-            height: auto;
+        }
+        p{
+            width: 50%;
+            float: left;
         }
     </style>
 </head>
