--- a/08_imagenes/netflix.html
+++ b/08_imagenes/netflix.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document imagen como mtitulo</title>
+    <title>Imagen como titulo</title>
     <style>
-        heder{
+        header {
             height: 12rem;
         }
-        h1{
-            background-image: url("./images/netflix.png");
+        h1 {
+            background-image: url("images/netflix.png");
             background-repeat: no-repeat;
-            
+            height: 100%; 
         }
-        h1 span{
+        h1 span {
             display: none;
         }
-        iframe{
+        iframe {
             width: 80%;
             height: 50vh;
         }
