img + video centrad

--- a/02_almeria/index.html
+++ b/02_almeria/index.html
@@ -139,8 +139,10 @@
                             creando un conjunto de extraordinaria magnitud.</p>
                         </figure>
                     </div>
+                    <!-- Video de almeria -->
                     <div class="video">
-                        <video src="./video/v_almeria.mp4" controls></video>
+                        <h3>Video de Almeria</h3>
+                        <video src="./video/v_almeria.mp4" controls>Un pequeño video de Almeria</video>
                     </div>
                     
                     <p>Es el centro neurálgico de la <strong>Comarca Metropolitana de Almería</strong>, en el extremo sureste de la Península Ibérica y de la comarca turística de Almería-Cabo de Gata-Níjar.</p>
@@ -149,18 +151,16 @@
                     
 
                     <!--El elemento de HTML section (<section>) representa una sección genérica de un documento. Sirve para determinar qué contenido corresponde a qué parte de un esquema. Piensa en el esquema como en el índice de contenido de un libro; un tema común y subsecciones relacionadas.  Es, por lo tanto, una etiquéta semántica. Su funcionalidad principal es estructurar semánticamente un documento a la hora de ser representado por parte de un agente usuario. Por ejemplo, un agente de usuario que represente el documento en voz, podría exponer al usuario el índice de contenido por niveles para navegar rápidamente por las distintas partes.-->
-                    <section>
-                        <h2>Ciudades pertenecientes al municipio de Almeria</h2>
+                    <!-- <section class="ciudades">
+                        <h2>Algunas ciudades pertenecientes al municipio de Almeria</h2>
                         <ul>
-                            <li>Níjar</li>
-                            <li><a href="https://es.wikipedia.org/wiki/Roquetas_de_Mar">Roquetas de Mar</a></li>
-                            <li>Santa Fe de Mondújar</li>
-                            <li>Purchena</li>
-                            <li>Turrillas</li>
-                            <li>Pechina</li>
-                            <li>etc</li>
+                            <li><img src="./images/nijar.jpg" alt="Foto de Nijar">Níjar</li>
+                            <li><img src="./images/roquetas.jpg" alt="Foto de Roquetas del Mar">Roquetas de Mar</a></li>
+                            <li><img src="./images/santa-fe-de-mondujar.jpg" alt="Foto de Santa Fe de Mondújar">Santa Fe de Mondújar</li>
+                            <li><img src="./images/purchena.jpg" alt="Foto de Purchena">Purchena</li>
+                            <li><img src="./images/pechina.jpg" alt="Foto de Pechina">Pechina</li>
                         </ul>   
-                    </section>
+                    </section> -->
                     <div>
                         <p>Tras su incorporación a la <em>Corona de Castilla</em> en 1489, la población fue diezmada por terremotos, plagas e incursiones de los piratas. La recuperación no fue patente hasta finales del siglo XIX, con el resurgir de la minería y la exportación de la uva de Ohanes, y de nuevo a partir de los años 1960, gracias a la explosión de la agricultura intensiva, el turismo, la construcción y la industria del mármol</p>
                         <p>Entre su patrimonio histórico-artístico, cabe destacar la Alcazaba musulmana (siglos X a XV), la catedral-fortaleza de la Encarnación (siglo XVI), el cargadero de mineral o Cable Inglés (finales del siglo XIX), y el Museo de Almería, reinaugurado en 2006</p>
